improved annotation detection + fixes from tests